--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -10,10 +10,7 @@ library(tidyverse)
 
 knitr::opts_chunk$set(
   warning = FALSE,
-  message = FALSE,
-  fig.width = 6,
-  fig.asp = .7,
-  out.width = "90%"
+  message = FALSE
 )
 
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
@@ -171,13 +168,14 @@ most_popular_product_by_dptm <-
     product_rank = min_rank(desc(num_order))
   ) %>% 
   select(-num_order) %>% 
-  filter(product_rank < 6) %>% 
-  head(40) %>% 
+  filter(product_rank < 4) %>% 
+  head(18) %>% 
+  arrange(product_rank) %>% 
   pivot_wider(
-    names_from = department,
+    names_from = product_rank,
+    names_prefix = "rank_",
     values_from = product_name
   ) %>% 
-  arrange(product_rank) %>% 
   knitr::kable()
 
 most_popular_product_by_aisle <-
@@ -193,12 +191,7 @@ most_popular_product_by_aisle <-
     product_rank = min_rank(desc(num_times))
   ) %>% 
   filter(product_rank < 4) %>% 
-  arrange(product_rank) %>% 
-  pivot_wider(
-    names_from = product_rank,
-    values_from = c(product_name, num_times),
-    names_glue = "Rank_{product_rank}_{.value}"
-  ) %>% 
+  arrange(aisle, product_rank) %>% 
   knitr::kable()
 
 mean_hour_of_day_dow <-
@@ -259,26 +252,33 @@ times being ordered
 The three most popular items in each of the aisles “baking ingredients”,
 “dog food care”, and “packaged vegetables fruits” are listed here
 
-| aisle                      | Rank\_1\_product\_name                        | Rank\_2\_product\_name              | Rank\_3\_product\_name | Rank\_1\_num\_times | Rank\_2\_num\_times | Rank\_3\_num\_times |
-|:---------------------------|:----------------------------------------------|:------------------------------------|:-----------------------|--------------------:|--------------------:|--------------------:|
-| baking ingredients         | Light Brown Sugar                             | Pure Baking Soda                    | Cane Sugar             |                 499 |                 387 |                 336 |
-| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats | Organix Chicken & Brown Rice Recipe | Small Dog Biscuits     |                  30 |                  28 |                  26 |
-| packaged vegetables fruits | Organic Baby Spinach                          | Organic Raspberries                 | Organic Blueberries    |                9784 |                5546 |                4966 |
+| aisle                      | product\_name                                 | num\_times | product\_rank |
+|:---------------------------|:----------------------------------------------|-----------:|--------------:|
+| baking ingredients         | Light Brown Sugar                             |        499 |             1 |
+| baking ingredients         | Pure Baking Soda                              |        387 |             2 |
+| baking ingredients         | Cane Sugar                                    |        336 |             3 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |         30 |             1 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |         28 |             2 |
+| dog food care              | Small Dog Biscuits                            |         26 |             3 |
+| packaged vegetables fruits | Organic Baby Spinach                          |       9784 |             1 |
+| packaged vegetables fruits | Organic Raspberries                           |       5546 |             2 |
+| packaged vegetables fruits | Organic Blueberries                           |       4966 |             3 |
 
 The most popular items in some departments are shown below
 
-| product\_rank | alcohol            | babies                                           | bakery                                         | beverages                       | breakfast                         | bulk                       | canned goods              | dairy eggs                      |
-|--------------:|:-------------------|:-------------------------------------------------|:-----------------------------------------------|:--------------------------------|:----------------------------------|:---------------------------|:--------------------------|:--------------------------------|
-|             1 | Sauvignon Blanc    | Baby Food Stage 2 Blueberry Pear & Purple Carrot | 100% Whole Wheat Bread                         | Sparkling Water Grapefruit      | Honey Nut Cheerios                | Dried Mango                | Organic Black Beans       | Organic Whole Milk              |
-|             2 | Cabernet Sauvignon | Spinach Peas & Pear Stage 2 Baby Food            | Organic Bread with 21 Whole Grains             | Spring Water                    | Organic Old Fashioned Rolled Oats | Organic Rolled Oats        | No Salt Added Black Beans | Organic Half & Half             |
-|             3 | Beer               | Gluten Free SpongeBob Spinach Littles            | Sourdough Bread                                | Lime Sparkling Water            | Raisin Bran Cereal                | Organic Black Mission Figs | Organic Garbanzo Beans    | Half & Half                     |
-|             4 | Chardonnay         | Free & Clear Unscented Baby Wipes                | Ezekiel 4:9 Bread Organic Sprouted Whole Grain | Sparkling Natural Mineral Water | Cereal                            | Apricots                   | Organic Diced Tomatoes    | Organic Unsweetened Almond Milk |
-|             5 | Vodka              | Broccoli & Apple Stage 2 Baby Food               | Original Nooks & Crannies English Muffins      | Soda                            | Organic Cinnamon Crunch Cereal    | Rolled Oats                | Black Beans               | Unsweetened Almondmilk          |
+| department | rank\_1                                          | rank\_2                               | rank\_3                               |
+|:-----------|:-------------------------------------------------|:--------------------------------------|:--------------------------------------|
+| alcohol    | Sauvignon Blanc                                  | Cabernet Sauvignon                    | Beer                                  |
+| babies     | Baby Food Stage 2 Blueberry Pear & Purple Carrot | Spinach Peas & Pear Stage 2 Baby Food | Gluten Free SpongeBob Spinach Littles |
+| bakery     | 100% Whole Wheat Bread                           | Organic Bread with 21 Whole Grains    | Sourdough Bread                       |
+| beverages  | Sparkling Water Grapefruit                       | Spring Water                          | Lime Sparkling Water                  |
+| breakfast  | Honey Nut Cheerios                               | Organic Old Fashioned Rolled Oats     | Raisin Bran Cereal                    |
+| bulk       | Dried Mango                                      | Organic Rolled Oats                   | Organic Black Mission Figs            |
 
 The day of the week when most orders were placed is Sunday. The average
-days since prior order per user are 17 days. The table showing the mean
-hour of the day at which Pink Lady Apples and Coffee Ice Cream are
-ordered on each day of the week is
+days since prior order per user are 17 days.  
+The table showing the mean hour of the day at which Pink Lady Apples and
+Coffee Ice Cream are ordered on each day of the week is
 
 | product\_name    |   Sunday |   Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
 |:-----------------|---------:|---------:|---------:|----------:|---------:|---------:|---------:|
@@ -302,15 +302,16 @@ p1_df %>%
        title = "The Number of Items Ordered in Each Aisle(>= 10000)",
        caption = "Data from instacart of p8105_datasets package ") +
   theme(
-    axis.text.x = element_text(angle = 90, size = 6),
-    axis.text.y = element_text(size = 6),
-    axis.title = element_text(size = 7),
-    plot.title = element_text(size = 7),
-    plot.caption = element_text(size = 4)
-  )
+    axis.text.x = element_text(size = 8),
+    axis.text.y = element_text(size = 8),
+    axis.title = element_text(size = 10),
+    plot.title = element_text(size = 10),
+    plot.caption = element_text(size = 5)
+  ) +
+  coord_flip()
 ```
 
-<img src="p8105_hw3_ry2417_files/figure-gfm/problem_1_plot-1.png" width="90%" />
+![](p8105_hw3_ry2417_files/figure-gfm/problem_1_plot-1.png)<!-- -->
 
 ## Problem 2
 
@@ -394,7 +395,7 @@ excellent_df %>%
   guides(color = guide_legend(nrow = 4))
 ```
 
-<img src="p8105_hw3_ry2417_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+![](p8105_hw3_ry2417_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
 Make a two-panel plot showing, for the years 2006, and 2010,
 distribution of data\_value for responses (“Poor” to “Excellent”) among
@@ -417,7 +418,7 @@ p2_df %>%
   )
 ```
 
-<img src="p8105_hw3_ry2417_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+![](p8105_hw3_ry2417_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
 ## Problem 3
 
@@ -566,7 +567,7 @@ p3_df %>%
   guides(color = guide_legend(nrow = 1))
 ```
 
-<img src="p8105_hw3_ry2417_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+![](p8105_hw3_ry2417_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
 
 From the plot, we can see that activity is extremely high during 7pm to
 10pm and moderately high between 6am to 12pm and 4pm to 5pm. The overall
